--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Web",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}/api",   // 指向 main.go 所在目录
+            "cwd": "${workspaceFolder}/api",        // ⭐ 关键：设置工作目录
+            "env": {
+                "GIN_MODE": "debug"
+            }
+        },
+        {
+            "name": "Launch cli",
             "type": "go",
             "request": "launch",
             "mode": "auto",
